# project-experiment

./: CONTRIBUTING.md  LICENSE  README.md  TEST  docker-compose.yml  package-lock.json
.github/: dependabot.yml
.github/workflows/: actionlint.yml  auto-merge.yml  ci.yml
backend/: .env.template  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: admin.py  authentication.py  consumers.py  models.py  routing.py  selializers.py  serializers.py  urls.py  views.py
backend/app/lib/: algorithm2.py
backend/app/migrations/: 0001_initial.py  0002_alter_members_event_id_alter_payments_event_id.py  0003_alter_results_event_id.py
backend/core/: asgi.py  settings.py
backend/src/project_experiment/: hello.py
backend/temp/: algorithm1.py  views.py
docs/: README.md
frontend/: .env.template  .gitignore  Dockerfile  README.md  biome.json  index.html  package-lock.json  package.json  pnpm-lock 2.yaml  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
frontend/mock/: db.json
frontend/src/: App.tsx  index.css
frontend/src/api/: auth.ts  axios.ts
frontend/src/components/: BillingDetailCard.tsx  BillingDetailModal.tsx  BillingTabList.tsx  CardWrapper.tsx  ConnectAlert.tsx  DialogMemo.tsx  EventRoot.tsx  ExampleBillingDetailCard.tsx  ExampleBillingTabList.tsx  ExampleDialogMemo.tsx  ExampleResultTab.tsx  ExampleResultTable.tsx  Header.tsx  HeaderMenu.tsx  Layout.tsx  LoginForm.tsx  LogoutButton.tsx  MemberList.tsx  NavBar.tsx  NavButton.tsx  NetworkGraph.tsx  PaymentNetwork.tsx  Result.tsx  ResultDetailCard.tsx  ResultTab.tsx  (+4 more)
resources/: migrate.sh
(+46 files in other folders)
