[project]
name = "project-experiment"
version = "1.0.0"
description = ""
authors = [
    {name = "u-hossy",email = "95125392+u-hossy@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "project_experiment", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
